[package]
name = "unitval-derive"
version = "0.1.0"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

description = "Provide values for unit enum variants"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/joshleeb/unitval"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = "1.0.33"
