[package]
name = "unitval"
version = "0.1.3"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

description = "Provide values for unit enum variants"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/joshleeb/unitval"

[dependencies]
unitval-derive = "0.1.2"
